--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -1,8 +1,10 @@
 FROM        alpine:3.4
 MAINTAINER  wener <wener@wener.me>
 
-RUN echo http://mirrors.aliyun.com/alpine/latest-stable/main/ > /etc/apk/repositories; \
-    echo http://mirrors.aliyun.com/alpine/latest-stable/community/ >> /etc/apk/repositories
+ENV ALPINE_VERSION=3.4
+
+RUN echo http://mirrors.aliyun.com/alpine/v$ALPINE_VERSION/main/ > /etc/apk/repositories; \
+    echo http://mirrors.aliyun.com/alpine/v$ALPINE_VERSION/community/ >> /etc/apk/repositories
 
 # Base tools
 RUN apk add --no-cache openssh-client curl busybox
