--- a/.travis.yml
+++ b/.travis.yml
@@ -4,16 +4,18 @@ services:
   - docker
 
 script:
-  - echo Building images
+  - echo Build images
   - docker build -t wener/base base
-  - docker build -t wener/zentao zentao
   - docker build -t wener/nginx nginx
   - docker build -t wener/java java
+  - docker build -t wener/ubuntu ubuntu
+  - docker build -t wener/zentao zentao
 
 after_success:
-  - echo Push changed
+  - echo Push images
   - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
   - docker push wener/base
-  - docker push wener/zentao
   - docker push wener/nginx
   - docker push wener/java
+  - docker push wener/ubuntu
+  - docker push wener/zentao
