--- a/ubuntu/Dockerfile
+++ b/ubuntu/Dockerfile
@@ -1,4 +1,4 @@
-FROM wener/ubuntu
+FROM ubuntu:yakkety
 
 MAINTAINER wener<wenermail@gmail.com>
 # 使用阿里云镜像
@@ -15,16 +15,3 @@ RUN . /etc/lsb-release && \
     deb-src http://mirrors.aliyun.com/ubuntu/ $DISTRIB_CODENAME-proposed main restricted universe multiverse \n\
     deb-src http://mirrors.aliyun.com/ubuntu/ $DISTRIB_CODENAME-backports main restricted universe multiverse \n|" /etc/apt/sources.list && \
     apt-get update
-
-RUN  apt-get install -y wget \
-  && rm -rf /var/lib/apt/lists/*
-
-ENV ZENTAO_VERSION="8.3.1"
-RUN wget -qO- http://dl.cnezsoft.com/zentao/$ZENTAO_VERSION/ZenTaoPMS.$ZENTAO_VERSION.zbox_64.tar.gz \
-    | tar -zxvC /opt
-
-COPY ./entrypoint.sh /
-
-VOLUME ["/opt/zbox/data"]
-EXPOSE 80 3306
-ENTRYPOINT ["sh", "entrypoint.sh"]
