--- a/edge/Dockerfile
+++ b/edge/Dockerfile
@@ -1,14 +1,13 @@
 FROM        alpine:edge
 MAINTAINER  wener<wener@wener.me>
 
-ENV ALPINE_VERSION=3.5
+ENV EDGE_VERSION=edge
 
-RUN echo http://mirrors.aliyun.com/alpine/v$ALPINE_VERSION/main/ > /etc/apk/repositories; \
-    echo http://mirrors.aliyun.com/alpine/v$ALPINE_VERSION/community/ >> /etc/apk/repositories
+RUN echo http://mirrors.aliyun.com/alpine/edge/main/ > /etc/apk/repositories; \
+    echo http://mirrors.aliyun.com/alpine/edge/community/ >> /etc/apk/repositories
 
 # Base tools
 RUN apk add --no-cache openssh-client curl busybox file
 
 RUN mkdir /lib64 && ln -s /lib/libc.musl-x86_64.so.1 /lib64/ld-linux-x86-64.so.2
 
-ENV EDGE_VERSION=3.5
