--- a/.travis.yml
+++ b/.travis.yml
@@ -23,22 +23,9 @@ script:
   - set -o xtrace
   - echo Build images
   - docker build -t wener/base base
-  - docker build -t wener/edge edge
-  - docker build -t wener/nginx nginx
-  - docker build -t wener/java java
-  - docker build -t wener/ubuntu ubuntu
-  - docker build -t wener/zentao zentao
-  - docker build -t wener/node node
-  - docker build -t wener/autossh autossh
+  - SKIP_PUSH=true ./build.sh
 
 after_success:
   - echo Push images
   - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
-  - docker push wener/base
-  - docker push wener/nginx
-  - docker push wener/java
-  - docker push wener/ubuntu
-  - docker push wener/zentao
-  - docker push wener/node
-  - docker push wener/edge
-  - docker push wener/autossh
+  - ./build.sh
