--- a/ubuntu/Dockerfile
+++ b/ubuntu/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:yakkety
 
 MAINTAINER wener<wenermail@gmail.com>
-# 使用阿里云镜像
+# Use aliyun ubuntu mirrors to replace original sources.list
 RUN . /etc/lsb-release && \
     echo "# Use Aliyun ubuntu mirror \n\
 deb http://mirrors.aliyun.com/ubuntu/ $DISTRIB_CODENAME main restricted universe multiverse \n\
@@ -14,4 +14,10 @@ deb-src http://mirrors.aliyun.com/ubuntu/ $DISTRIB_CODENAME-security main restri
 deb-src http://mirrors.aliyun.com/ubuntu/ $DISTRIB_CODENAME-updates main restricted universe multiverse \n\
 deb-src http://mirrors.aliyun.com/ubuntu/ $DISTRIB_CODENAME-proposed main restricted universe multiverse \n\
 deb-src http://mirrors.aliyun.com/ubuntu/ $DISTRIB_CODENAME-backports main restricted universe multiverse \n" \
-    | cat - /etc/apt/sources.list | tee /etc/apt/sources.list > /dev/null \
+    | tee /etc/apt/sources.list > /dev/null
+# Prepend instead of replace, first update is very slow!
+#    | cat - /etc/apt/sources.list | tee /etc/apt/sources.list > /dev/null
+
+RUN apt-get update && apt-get install -y \
+    nano \
+    && rm -rf /var/lib/apt/lists/*
