--- a/builder/Dockerfile
+++ b/builder/Dockerfile
@@ -1,40 +1,5 @@
-FROM        wener/base
+FROM        wener/java
 MAINTAINER  wener<wener@wener.me>
-
-# Base tools
-RUN apk add --no-cache bash ca-certificates openssl git
-
-#########
-# Java
-#########
-
-# Default to UTF-8 file.encoding
-ENV LANG C.UTF-8
-
-# add a simple script that can auto-detect the appropriate JAVA_HOME value
-# based on whether the JDK or only the JRE is installed
-RUN { \
-		echo '#!/bin/sh'; \
-		echo 'set -e'; \
-		echo; \
-		echo 'dirname "$(dirname "$(readlink -f "$(which javac || which java)")")"'; \
-	} > /usr/local/bin/docker-java-home \
-	&& chmod +x /usr/local/bin/docker-java-home
-ENV JAVA_HOME /usr/lib/jvm/java-1.8-openjdk
-ENV PATH $PATH:/usr/lib/jvm/java-1.8-openjdk/jre/bin:/usr/lib/jvm/java-1.8-openjdk/bin
-
-ENV JAVA_VERSION 8u111
-ENV JAVA_ALPINE_VERSION 8.111.14-r1
-
-RUN set -x \
-	&& apk add --no-cache \
-		openjdk8="$JAVA_ALPINE_VERSION" \
-	&& [ "$JAVA_HOME" = "$(docker-java-home)" ]
-
-# Add maven
-ENV MAVEN_VERSION 3.3.9
-ENV MAVEN_ALPINE_VERSION 3.3.9-r1
-RUN apk add --no-cache maven="$MAVEN_ALPINE_VERSION"
 
 #########
 # Golang
@@ -81,6 +46,6 @@ RUN apk add --no-cache docker="$DOCKER_ALPINE_VERSION"
 #########
 RUN apk add --no-cache jq make
 
-ADD root /
+COPY root /
 
 CMD ["bash"]
