--- a/caddy/php/Dockerfile
+++ b/caddy/php/Dockerfile
@@ -1,14 +1,8 @@
-FROM wener/base
+FROM wener/caddy:full
 MAINTAINER wener <wener@wener.me>
 
-LABEL caddy_version="0.9.5" architecture="amd64"
-
-ARG plugins=git
-
-RUN apk add --no-cache openssh-client git tar php7-fpm curl
-
 # essential php libs
-RUN apk add --no-cache php7-curl php7-dom php7-gd php7-ctype php7-zip php7-xml php7-iconv php7-sqlite3 php7-mysqli php7-pgsql php7-json php7-phar php7-openssl php7-pdo
+RUN apk add --no-cache php7-fpm php7-curl php7-dom php7-gd php7-ctype php7-zip php7-xml php7-iconv php7-sqlite3 php7-mysqli php7-pgsql php7-json php7-phar php7-openssl php7-pdo
 
 # composer
 RUN curl --silent --show-error --fail --location \
@@ -18,14 +12,6 @@ RUN curl --silent --show-error --fail --location \
 
 # allow environment variable access.
 RUN echo "clear_env = no" >> /etc/php7/php-fpm.conf
-
-# install caddy
-RUN curl --silent --show-error --fail --location \
-      --header "Accept: application/tar+gzip, application/x-gzip, application/octet-stream" -o - \
-      "https://caddyserver.com/download/build?os=linux&arch=amd64&features=${plugins}" \
-    | tar --no-same-owner -C /usr/bin/ -xz caddy \
- && chmod 0755 /usr/bin/caddy \
- && /usr/bin/caddy -version
 
 EXPOSE 80 443 2015
 WORKDIR /srv
