pdns use default config dir

--- a/pdns/Dockerfile
+++ b/pdns/Dockerfile
@@ -6,9 +6,9 @@ RUN apk add --no-cache pdns pdns-recursor pdns-backend-mysql pdns-backend-sqlite
 # We need nsupdate, dig
 RUN apk add --no-cache bind-tools
 
-# Expected pdns.conf in /data
-VOLUME /data
-WORKDIR /data
+# Expected pdns.conf in /etc/pdns
+VOLUME /etc/pdns
+WORKDIR /etc/pdns
 EXPOSE 53 53/udp 80 8080
 
-CMD [ "pdns_server", "--daemon=no", "--config-dir=/data" ]
+CMD [ "pdns_server", "--daemon=no" ]
