Jenkins fat add saferestart; Use $(head -c3 /etc/alpine-release) instead of VERSION ENV

--- a/base/base/Dockerfile
+++ b/base/base/Dockerfile
@@ -3,8 +3,8 @@ MAINTAINER  wener<wener@wener.me>
 
 ENV ALPINE_VERSION=3.6
 
-RUN echo http://mirrors.aliyun.com/alpine/v$ALPINE_VERSION/main/ > /etc/apk/repositories; \
-    echo http://mirrors.aliyun.com/alpine/v$ALPINE_VERSION/community/ >> /etc/apk/repositories
+RUN echo http://mirrors.aliyun.com/alpine/v$(head -c3 /etc/alpine-release)/main/ > /etc/apk/repositories; \
+    echo http://mirrors.aliyun.com/alpine/v$(head -c3 /etc/alpine-release)/community/ >> /etc/apk/repositories
 
 # Base tools
 RUN apk add --no-cache openssh-client curl busybox file nano
