Edge add bash, add asterisk

--- a/jenkins/fat/Dockerfile
+++ b/jenkins/fat/Dockerfile
@@ -26,3 +26,10 @@ RUN install-plugins.sh \
     # UI \
     blueocean cloudbees-folder translation nested-view
 
+USER root
+RUN echo http://mirrors.aliyun.com/alpine/v$(head -c3 /etc/alpine-release)/main/ > /etc/apk/repositories; \
+    echo http://mirrors.aliyun.com/alpine/v$(head -c3 /etc/alpine-release)/community/ >> /etc/apk/repositories
+RUN apk add --no-cache maven docker
+# Works for -v /var/run/docker.sock:/var/run/docker.sock
+# RUN adduser jenkins users && adduser jenkins ping
+USER jenkins
