add asterisk:full, simplify asterisk:latest

--- a/asterisk/asterisk/Dockerfile
+++ b/asterisk/asterisk/Dockerfile
@@ -2,7 +2,7 @@ FROM wener/base:bash
 MAINTAINER wener
 
 RUN apk add --no-cache asterisk openssl && \
-    apk add --no-cache asterisk-{alsa,cdr-mysql,chan-dongle,curl,dahdi,dbg,dev,doc,fax,mobile,odbc,pgsql,sample-config,sounds-en,sounds-moh,speex,srtp,tds}
+    apk add --no-cache asterisk-{curl,pgsql,sample-config,sounds-en,sounds-moh,srtp}
 
 # HTTP HTTPS AMI
 EXPOSE 8088 8089 5038
