1. Formalize build param 2. unified php:5, php:7 packages 3. Add nginx:bash

--- a/php/5/Dockerfile
+++ b/php/5/Dockerfile
@@ -1,17 +1,11 @@
-FROM        wener/nginx
+FROM        wener/nginx:bash
 MAINTAINER  wener<wener@wener.me>
 
-# Use bash as default shell
-RUN apk --no-cache add bash && \
-    mv /bin/sh /bin/ash && \
-    ln -s /bin/bash /bin/sh
-
-RUN apk --no-cache add php5 &&\
+RUN apk --no-cache add php7 &&\
     apk --no-cache add \
-    php5-{bz2,calendar,ctype,curl,dom,exif,ftp,gd,gettext,gmp,iconv,json,ldap,memcache,mysql,mysqli} \
-    php5-{odbc,openssl,pcntl,pdo,pdo_mysql,pdo_odbc,pdo_sqlite,phar,posix,shmop,snmp,soap,sockets,sqlite3,sysvmsg} \
-    php5-{sysvsem,sysvshm,wddx,xml,xmlreader,xmlrpc,xsl,zip,zlib} \
-    php5-fpm
+    # Base package exclude cgi,litespeed,apache2,dev,doc
+    php7-{bcmath,bz2,calendar,common,ctype,curl,dba,dom,embed,enchant,exif,fileinfo,fpm,ftp,gd,gettext,gmp,iconv,imap,intl,json,ldap,mbstring,mcrypt,mysqli,mysqlnd,odbc,opcache,openssl,pcntl,pdo,pdo_dblib,pdo_mysql,pdo_odbc,pdo_pgsql,pdo_sqlite,pear,pgsql,phar,phpdbg,posix,pspell,recode,session,shmop,simplexml,snmp,soap,sockets,sqlite3,sysvmsg,sysvsem,sysvshm,tidy,tokenizer,wddx,xml,xmlreader,xmlrpc,xmlwriter,xsl,zip,zlib}
+
 
 COPY root /
 COPY 5/root /
@@ -19,7 +13,7 @@ COPY 5/root /
 VOLUME ["/var/www/html"]
 WORKDIR /var/www/html
 
-COPY entrypoint.sh /
+COPY 5/entrypoint.sh /
 RUN chmod +x /entrypoint.sh
 EXPOSE 80
 
