1. update readme 2. add php:builder to build module 3. add php:app with pre-build module 4. remove php:mongo

--- a/php/php/Dockerfile
+++ b/php/php/Dockerfile
@@ -3,8 +3,13 @@ MAINTAINER  wener<wener@wener.me>
 
 RUN apk --no-cache add php7 &&\
     apk --no-cache add \
-    # Base package exclude cgi,litespeed,apache2,dev,doc,embed,enchant,pear,phpdbg
-    php7-{bcmath,bz2,calendar,common,ctype,curl,dba,dom,exif,fileinfo,fpm,ftp,gd,gettext,gmp,iconv,imap,intl,json,ldap,mbstring,mcrypt,mysqli,mysqlnd,odbc,opcache,openssl,pcntl,pdo,pdo_dblib,pdo_mysql,pdo_odbc,pdo_pgsql,pdo_sqlite,pgsql,phar,posix,pspell,recode,session,shmop,simplexml,snmp,soap,sockets,sqlite3,sysvmsg,sysvsem,sysvshm,tidy,tokenizer,wddx,xml,xmlreader,xmlrpc,xmlwriter,xsl,zip,zlib}
+    # Base package exclude cgi,litespeed,apache2,doc
+    php7-{bcmath,bz2,calendar,common,ctype,curl,dev,dba,dom,embed,enchant,exif,fileinfo,fpm,ftp,gd,gettext,gmp,iconv,imap,intl,json,ldap,mbstring,mcrypt,mysqli,mysqlnd,odbc,opcache,openssl,pcntl,pdo,pdo_dblib,pdo_mysql,pdo_odbc,pdo_pgsql,pdo_sqlite,pear,pgsql,phar,phpdbg,posix,pspell,recode,session,shmop,simplexml,snmp,soap,sockets,sqlite3,sysvmsg,sysvsem,sysvshm,tidy,tokenizer,wddx,xml,xmlreader,xmlrpc,xmlwriter,xsl,zip,zlib}
+
+# 如果执行了这一步, 会无法 install, 不知道为什么
+# https://github.com/docker-library/php/issues/443
+#RUN pecl update-channels && \
+#    rm -rf /tmp/pear ~/.pearrc
 
 COPY root /
 COPY 7/root /
