--- a/php/builder/Dockerfile
+++ b/php/builder/Dockerfile
@@ -4,6 +4,6 @@ MAINTAINER  wener
 # tools
 RUN apk --no-cache add alpine-sdk
 # common dependency
-RUN apk --no-cache add libressl-dev zlib-dev
+RUN apk --no-cache add libressl-dev zlib-dev php7-dev
 
 ENTRYPOINT ["bash"]
