--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -1,8 +1,7 @@
 FROM        wener/base:bash
 MAINTAINER  wener<wener@wener.me>
 
-RUN apk add --no-cache yarn nodejs-npm && apk del nodejs-current
+RUN apk add --no-cache nodejs yarn nodejs-npm && \
+    apk add --no-cache paxctl && paxctl -cm `which node` && apk del --no-cache paxctl
 RUN npm config set registry https://registry.npm.taobao.org && \
     yarn config set registry https://registry.npm.taobao.org
-
-CMD ["node"]
