1. base 使用 libc6-compat 而不是 ln 2. java 添加 pax 处理 3. 更新 php

--- a/base/base/Dockerfile
+++ b/base/base/Dockerfile
@@ -5,6 +5,4 @@ RUN echo http://mirrors.aliyun.com/alpine/v$(head -c3 /etc/alpine-release)/main/
     echo http://mirrors.aliyun.com/alpine/v$(head -c3 /etc/alpine-release)/community/ >> /etc/apk/repositories
 
 # Base tools
-RUN apk add --no-cache openssh-client curl busybox file nano
-
-RUN mkdir /lib64 && ln -s /lib/libc.musl-x86_64.so.1 /lib64/ld-linux-x86-64.so.2
+RUN apk add --no-cache openssh-client curl busybox file nano libc6-compat
