--- a/builder/Dockerfile
+++ b/builder/Dockerfile
@@ -4,17 +4,13 @@ MAINTAINER  wener<wener@wener.me>
 #########
 # Golang
 #########
-ENV GO_VERSION 1.7.3
-ENV GO_ALPINE_VERSION 1.7.3-r0
-RUN apk add --no-cache go="$GO_ALPINE_VERSION" go-tools="$GO_ALPINE_VERSION"
+RUN apk add --no-cache go go-tools
 RUN apk add --no-cache godep
 
 #########
 # Nodejs
 #########
-ENV NODE_VERSION 6.9.2
-ENV NODE_ALPINE_VERSION 6.9.2-r1
-RUN apk add --no-cache nodejs="$NODE_ALPINE_VERSION" nodejs-dev="$NODE_ALPINE_VERSION"
+RUN apk add --no-cache nodejs nodejs-dev
 
 RUN npm config set registry https://registry.npm.taobao.org
 
@@ -26,8 +22,7 @@ RUN npm set progress=false && \
 #########
 # Python
 #########
-ENV PYTHON2_ALPINE_VERSION 2.7.13-r0
-RUN apk add --no-cache python2="$PYTHON2_ALPINE_VERSION" python2-dev="$PYTHON2_ALPINE_VERSION"
+RUN apk add --no-cache python2 python2-dev
 
 #########
 # GCC
@@ -37,9 +32,7 @@ RUN apk add --no-cache gcc g++ autoconf automake make cmake
 #########
 # Docker
 #########
-ENV DOCKER_VERSION 1.12.6
-ENV DOCKER_ALPINE_VERSION 1.12.6-r0
-RUN apk add --no-cache docker="$DOCKER_ALPINE_VERSION"
+RUN apk add --no-cache docker
 
 #########
 # Helper
