--- a/java/java/Dockerfile
+++ b/java/java/Dockerfile
@@ -19,4 +19,5 @@ ENV PATH $PATH:/usr/lib/jvm/java-1.8-openjdk/jre/bin:/usr/lib/jvm/java-1.8-openj
 RUN set -x \
 	&& apk add --no-cache \
 		openjdk8 \
-	&& [ "$JAVA_HOME" = "$(docker-java-home)" ]
+	&& [ "$JAVA_HOME" = "$(docker-java-home)" ] \
+    && apk add --no-cache paxctl && paxctl -cm $(which java) && apk del --no-cache paxctl
