--- a/java/stack/Dockerfile
+++ b/java/stack/Dockerfile
@@ -1,9 +1,7 @@
 FROM wener/java
 MAINTAINER wener
 
-RUN apk update && \
-    apk upgrade -a && \
-    apk add openssh openssh-sftp-server mosh git bash-completion \
+RUN apk add openssh openssh-sftp-server mosh git bash-completion \
             openssl libssl1.0 libcrypto1.0 \
             htop && \
     rm -rf /var/cache/apk/*
