update caddy, now caddy works

--- a/caddy/caddy/Dockerfile
+++ b/caddy/caddy/Dockerfile
@@ -1,25 +1,36 @@
+#
+# Builder
+#
+FROM abiosoft/caddy:builder as builder
+
+ARG version="0.10.11"
+ARG plugins="git"
+
+RUN VERSION=${version} PLUGINS=${plugins} /bin/sh /usr/bin/builder.sh
+
+#
+# Final stage
+#
 FROM wener/base
-MAINTAINER wener <wener@wener.me>
+LABEL maintainer "wener <wener@wener.me>"
 
-LABEL caddy_version="0.10.0" architecture="amd64"
+LABEL caddy_version="0.10.11"
 
-ARG plugins=git
+RUN apk add --no-cache openssh-client git
 
-RUN apk add --no-cache openssh-client git tar curl
+# install caddy
+COPY --from=builder /install/caddy /usr/bin/caddy
 
-RUN curl --silent --show-error --fail --location \
-      --header "Accept: application/tar+gzip, application/x-gzip, application/octet-stream" -o - \
-      "https://caddyserver.com/download/build?os=linux&arch=amd64&features=${plugins}" \
-    | tar --no-same-owner -C /usr/bin/ -xz caddy \
- && chmod 0755 /usr/bin/caddy \
- && /usr/bin/caddy -version
+# validate install
+RUN /usr/bin/caddy -version
+RUN /usr/bin/caddy -plugins
 
 EXPOSE 80 443 2015
-VOLUME /root/.caddy
+VOLUME /root/.caddy /srv
 WORKDIR /srv
 
-COPY common/Caddyfile /etc/Caddyfile
-COPY common/index.html /srv/index.html
+COPY Caddyfile /etc/Caddyfile
+COPY index.html /srv/index.html
 
 ENTRYPOINT ["/usr/bin/caddy"]
 CMD ["--conf", "/etc/Caddyfile", "--log", "stdout"]
