1. add grpc 2. update go 3. misc update

--- a/builder/Dockerfile
+++ b/builder/Dockerfile
@@ -1,4 +1,4 @@
-FROM        wener/java:maven
+FROM        wener/base:builder
 MAINTAINER  wener<wener@wener.me>
 
 #########
@@ -10,24 +10,16 @@ RUN apk add --no-cache godep
 #########
 # Nodejs
 #########
-RUN apk add --no-cache nodejs nodejs-dev
+RUN apk add --no-cache nodejs-current nodejs-current-dev yarn
 
 RUN npm config set registry https://registry.npm.taobao.org
 
-# Global install yarn package manager
-RUN npm set progress=false && \
-    npm install -g --silent --progress=false yarn && \
-    npm cache clean
 
 #########
 # Python
 #########
 RUN apk add --no-cache python2 python2-dev
-
-#########
-# GCC
-#########
-RUN apk add --no-cache gcc g++ autoconf automake make cmake
+RUN apk add --no-cache python3 python3-dev
 
 #########
 # Docker
@@ -37,7 +29,7 @@ RUN apk add --no-cache docker
 #########
 # Helper
 #########
-RUN apk add --no-cache jq make
+RUN apk add --no-cache jq
 
 COPY root /
 
