--- a/nginx/bash/Dockerfile
+++ b/nginx/bash/Dockerfile
@@ -1,7 +1,7 @@
 FROM        wener/base:bash
 MAINTAINER  wener<wener@wener.me>
 
-RUN apk --no-cache add nginx-mod-http-lua && \
+RUN apk --no-cache add nginx && \
     chown -R nginx:www-data /var/lib/nginx && \
     mkdir -p /run/nginx/
 
