--- a/caddy/full/Dockerfile
+++ b/caddy/full/Dockerfile
@@ -4,8 +4,11 @@
 FROM abiosoft/caddy:builder as builder
 
 ARG version="0.10.12"
-# Build failed grpc,gopkg
-ARG plugins="authz,awses,awslambda,cache,cgi,cors,datadog,expires,filemanager,filter,forwardproxy,git,hugo,ipfilter,jekyll,jwt,locale,login,mailout,minify,nobots,prometheus,proxyprotocol,ratelimit,realip,reauth,restic,upload,webdav"
+ARG plugins="\
+    # HTTP Plugins \
+    authz,awses,awslambda,cache,cgi,cors,datadog,expires,filemanager,filter,forwardproxy,git,gopkg,grpc,hugo,ipfilter,jekyll,jwt,locale,login,mailout,minify,nobots,prometheus,proxyprotocol,ratelimit,realip,reauth,restic,upload,webdav,\
+    # TLS DNS Provider \
+    auroradns,azure,cloudflare,cloudxns,digitalocean,dnsimple,dnsmadeeasy,dnspod,duckdns,dyn,exoscale,fastdns,gandi,gandiv5,glesys,godaddy,googlecloud,lightsail,linode,namecheap,namedotcom,ns1,otc,ovh,pdns,rackspace,rfc2136,route53,vultr"
 
 RUN VERSION=${version} PLUGINS=${plugins} /bin/sh /usr/bin/builder.sh
 
@@ -14,6 +17,8 @@ RUN VERSION=${version} PLUGINS=${plugins} /bin/sh /usr/bin/builder.sh
 #
 FROM wener/caddy
 LABEL maintainer="wener <wener@wener.me>"
+
+RUN apk add --no-cache openssh-client git
 
 # install caddy
 COPY --from=builder /install/caddy /usr/bin/caddy
